class/5.service/ing/svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeinfo
spec:
  selector:
    name: nodeinfo
  ports:
  - port: 80
